--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: ningenMe/setup-rustup@v1.1.0
     - run: sudo apt-get update
-    - run: sudo apt-get install -qq --yes --force-yes musl-tools gcc-mingw-w64 gcc-multilib gcc-mingw-w64-x86-64 gcc-mingw-w64-i686 clang-13 llvm-13 lld-13 llvm-dev gcc-mingw-w64-i686-win32 gcc-mingw-w64-x86-64-win32
+    - run: sudo apt-get install -qq --yes musl-tools gcc-mingw-w64 gcc-multilib gcc-mingw-w64-x86-64 gcc-mingw-w64-i686 clang llvm lld llvm-dev gcc-mingw-w64-i686-win32 gcc-mingw-w64-x86-64-win32
     - run: cargo install cargo-xwin --locked
     - run: echo "XWIN_ARCH=x86,x86_64,aarch64,aarch" >> "$GITHUB_ENV"
 
